--- a/assets/css/joinplayer.css
+++ b/assets/css/joinplayer.css
@@ -83,7 +83,8 @@
    top: 30px;
    left: 200px;
     box-shadow: 0 3px 10px rgb(3, 10, 87);
-  
+    background-color: rgb(16, 161, 16);
+  border-radius: 10px;
   }
 .select{
     display: flex;
@@ -104,3 +105,13 @@
     font-size: 20px;
     font-weight: 500;
 }
+input[type="name"]::placeholder{
+    padding-left: 5%;
+    
+ 
+} 
+input[type="number"]::placeholder{
+    padding-left: 5%;
+    
+ 
+} 
