--- a/assets/css/booking.css
+++ b/assets/css/booking.css
@@ -1,32 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-*{
-    margin:0px;
-    padding:0px;
+
+* {
+    margin: 0px;
+    padding: 0px;
 }
-header{
-    background: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%);
+
+header {
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 4%, rgba(0, 212, 255, 1) 100%);
     height: 100vh;
     background-position: center;
     background-size: cover;
     background-image: url(../../assets/images/onlinepayback.jpg);
-    
- 
+
+
 }
+
 /* 
 main */
-.main{
+.main {
     position: relative;
     top: 120px;
     left: 0px;
     padding-left: 310px;
-  
-       
-        
-       
-        
-        
+
+
+
+
+
+
 }
-.form1{
+
+.form1 {
     width: 70%;
     height: 700px;
     border: 5px solid black;
@@ -37,58 +41,67 @@ main */
     grid-template-columns: 1.5fr 3fr; */
 }
 
-.payment{
+.payment {
     width: 335px;
     height: 633px;
-  
+
 }
-.content1{
-   
-    background-color: rgba(0,0,0,0.5);
+
+.content1 {
+
+    background-color: rgba(0, 0, 0, 0.5);
     color: rgb(239, 239, 239);
-   height: 700px;
-  
+    height: 700px;
+
 }
-.pay1{
+
+.pay1 {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: larger;
 }
-.pay2{
-    display: flex;
-   justify-content:center ;
- 
- 
 
-  
+.pay2 {
+    display: flex;
+    justify-content: center;
+
+
+
+
 }
-#mm{
+
+#mm {
     width: 50px;
     position: relative;
     right: 20px;
 }
-#yy{
+
+#yy {
     width: 50px;
     position: relative;
     left: 20px;
 }
-.pay3{
+
+.pay3 {
     display: flex;
     flex-direction: column;
     align-items: center;
-   
+
 }
-.upi{
+
+.upi {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-input{
+
+input {
     width: 250px;
     height: 30px;
 }
-.payonline{
+
+.payonline {
     width: 290%;
     height: 44px;
     background-color: rgb(38, 211, 22);
@@ -97,29 +110,35 @@ input{
     justify-content: center;
     padding: 10px 0px;
     cursor: pointer;
-    position:relative;
+    position: relative;
     right: 30px;
     font-weight: bold;
     border-radius: 10px;
 
 }
-a{
+
+a {
     text-decoration: none;
 }
-input[type="name"]::placeholder{
+
+input[type="name"]::placeholder {
     padding-left: 5%;
-    
- 
-} 
-input[type="text"]::placeholder{
+
+
+}
+
+input[type="text"]::placeholder {
     padding-left: 5%;
 }
-.or{
+
+.or {
     font-size: 17px;
 }
-.goback{
-    color:white;
+
+.goback {
+    color: white;
     position: relative;
     bottom: 20px;
 }
+
 /* main */
