--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -1,240 +1,265 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-*{
-    margin:0px;
-    padding:0px;
+
+* {
+    margin: 0px;
+    padding: 0px;
 }
 
 /* header */
-header{
-     height: 10vh;
+header {
+    height: 10vh;
     background-position: center;
     background-size: cover;
     background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
     font-family: 'Noto Serif Khojki', serif;
 }
- 
 
-ul{
+
+ul {
     display: flex;
-    justify-content:end;
+    justify-content: end;
     margin-right: 2%;
 
 }
-ul li{
+
+ul li {
     list-style-type: none;
     padding: 2%;
- 
+
 }
-ul li a{
+
+ul li a {
     text-decoration: none;
     font-size: larger;
     color: white;
 }
-ul li a:hover{
+
+ul li a:hover {
     color: rgb(130, 217, 235);
-  
-}
-
-.login{
-  font-size: medium;
-  padding: 5px 15px;
-  height: 113%;
-  width: 102%;
-  background-color: rgb(5, 34, 120);
-  color: white;
-  position: relative;
-  bottom: 15%;
-  font-weight: bold;
-  cursor: pointer;
-  border: none;
-  border-radius: 10px;
-  
 
 }
-.logo{
-    width:14%;
+
+.login {
+    font-size: medium;
+    padding: 5px 15px;
+    height: 113%;
+    width: 102%;
+    background-color: rgb(5, 34, 120);
+    color: white;
+    position: relative;
+    bottom: 15%;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    border-radius: 10px;
+
+
+}
+
+.logo {
+    width: 14%;
     position: relative;
     bottom: 80px;
 }
+
 /* header */
 /* main1 */
-    .content1{
-        text-align: center;
-        font-size: xx-large;
-        font-weight:bolder;
-        
-    }
-    /* main1 */
+.content1 {
+    text-align: center;
+    font-size: xx-large;
+    font-weight: bolder;
 
-    /* main2 */
-    .main2{
-        height: 175vh;
-        background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
- 
-      
-        }
-        .bar{
-            display: grid;
-            grid-template-columns: 6fr 4fr;
-            grid-template-rows: 92vh;
-           
-        }
-        .sidebar1{ 
-            color: white;
-            margin:10px 10px;
-           
-            height: 170vh; 
-          background-color:rgb(218, 222, 241) ;
-          border-radius: 2%;
-          background-image: linear-gradient(to top, #d5d7ea, #ffffff, #ffffff, #ffffff, #000833);
+}
 
-        
-    
-        }
-        .sidebar2{
-            border-radius: 2%;
-            background-color:rgb(218, 222, 241) ;
-            color: white;  
-            margin:10px 10px;  
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 170vh;
-          
-        
-        }
-    .box1{
-        color: rgb(253, 251, 251);
-        display: flex;
-        flex-direction: column;
-       align-items: center;
-       font-size: larger;
-       line-height: 1.5;
- 
-    }
-    .place{
-        font-size: larger;
-        font-weight: bold;
-    }
-   
-    .box2{
-        color: rgb(4, 10, 15);
-        display: flex;
-        flex-direction: column;
-       align-items: center;
-       font-size: larger;
-    }
-   
-    
-   
- 
-    .pricelast{
-        background-color: rgba(255, 255, 255, 0.906);
-        width: 102px;
-        height: 30px;
-        display: flex;
-        justify-content: center;
-        font-size: 20px;
-        padding: 7px 5px;
-        position: relative;
-        left: 7px;
-        top: 7px;
-        border-radius: 10px;
-        color: black;
-    
-    }
-    
-    .fa-location-dot{
-        color:rgb(19, 197, 16);
-        font-size: larger;
-    }
-    .pricen{
-        color: rgb(245, 246, 247);
-        display: flex;
-        flex-direction: column;
-       align-items: center;
-       font-size: larger;
-       position: relative;
-       right: 7px;
-       top: 15px;
-    }
-    /* slider */
+/* main1 */
 
-    .containerslider{
-        width: 520px;
-       overflow: hidden;
-       position: relative;
-       left: 90px;
-       top: 30px;
-       border: 5px solid black;
-       background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-       color: white;
-      
-    }
-    .images{
-        display: flex;
-     
-        height: 350px;
-     
+/* main2 */
+.main2 {
+    height: 175vh;
+    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
 
-    }
-    .images img{
-        height: 350px;
-        width: 100%;
-    
-    }
-    .images input{
-        display: none;
-    }
-    .labeldots{
-        display: flex;
-        justify-content: center;
-        margin: 10px;
-    }
-    .labeldots label{
-        height: 5px;
-        width: 5px;
-        margin: 7px;
-        border-radius: 50%;
-        padding: 5px 5px;
-        border: 1px double rgb(234, 229, 229);
-        cursor: pointer;
-        transition: all 0.55s ease;
 
-    }
-    .labeldots label:hover{
-        background-color: rgb(228, 226, 226);
-    }
-    #images1:checked~.groundg1{
-        margin-left: 0%;
+}
 
-    }
-    #images2:checked~.groundg2{
+.bar {
+    display: grid;
+    grid-template-columns: 6fr 4fr;
+    grid-template-rows: 92vh;
+
+}
+
+.sidebar1 {
+    color: white;
+    margin: 10px 10px;
+
+    height: 170vh;
+    background-color: rgb(218, 222, 241);
+    border-radius: 2%;
+    background-image: linear-gradient(to top, #d5d7ea, #ffffff, #ffffff, #ffffff, #000833);
+
+
+
+}
+
+.sidebar2 {
+    border-radius: 2%;
+    background-color: rgb(218, 222, 241);
+    color: white;
+    margin: 10px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 170vh;
+
+
+}
+
+.box1 {
+    color: rgb(253, 251, 251);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: larger;
+    line-height: 1.5;
+
+}
+
+.place {
+    font-size: larger;
+    font-weight: bold;
+}
+
+.box2 {
+    color: rgb(4, 10, 15);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: larger;
+}
+
+
+
+
+.pricelast {
+    background-color: rgba(255, 255, 255, 0.906);
+    width: 102px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    padding: 7px 5px;
+    position: relative;
+    left: 7px;
+    top: 7px;
+    border-radius: 10px;
+    color: black;
+
+}
+
+.fa-location-dot {
+    color: rgb(19, 197, 16);
+    font-size: larger;
+}
+
+.pricen {
+    color: rgb(245, 246, 247);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: larger;
+    position: relative;
+    right: 7px;
+    top: 15px;
+}
+
+/* slider */
+
+.containerslider {
+    width: 520px;
+    overflow: hidden;
+    position: relative;
+    left: 90px;
+    top: 30px;
+    border: 5px solid black;
+    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+    color: white;
+
+}
+
+.images {
+    display: flex;
+
+    height: 350px;
+
+
+}
+
+.images img {
+    height: 350px;
+    width: 100%;
+
+}
+
+.images input {
+    display: none;
+}
+
+.labeldots {
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+
+.labeldots label {
+    height: 5px;
+    width: 5px;
+    margin: 7px;
+    border-radius: 50%;
+    padding: 5px 5px;
+    border: 1px double rgb(234, 229, 229);
+    cursor: pointer;
+    transition: all 0.55s ease;
+
+}
+
+.labeldots label:hover {
+    background-color: rgb(228, 226, 226);
+}
+
+#images1:checked~.groundg1 {
+    margin-left: 0%;
+
+}
+
+#images2:checked~.groundg2 {
 
     margin-left: -100%;
-        
-    }
-    #images3:checked~.groundg3{
-        margin-left: -200%;
-        
-    }
-     /* slider */
-  
 
-   
-     .addplayers{
-        width: 100%;
-       border: 1px solid black;
-        background-color: rgba(91, 173, 37, 0.906);
-        font-size: 17px;
-        display: flex;
-        justify-content: center;
-        padding: 10px 30px;
-        cursor: pointer;
-        border-radius: 10px;
-        box-shadow: 0 3px 10px rgb(110, 107, 124);
-     }
-  .locationinfo{
+}
+
+#images3:checked~.groundg3 {
+    margin-left: -200%;
+
+}
+
+/* slider */
+
+
+
+.addplayers {
+    width: 100%;
+    border: 1px solid black;
+    background-color: rgba(91, 173, 37, 0.906);
+    font-size: 17px;
+    display: flex;
+    justify-content: center;
+    padding: 10px 30px;
+    cursor: pointer;
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgb(110, 107, 124);
+}
+
+.locationinfo {
     width: 290px;
     height: 190px;
     border: 2px solid black;
@@ -245,22 +270,24 @@ ul li a:hover{
     right: 150px;
     top: 20px;
     background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
- color: white;
+    color: white;
 
- border-radius: 4%;
- box-shadow: 0 3px 10px rgb(0, 0, 0);
- line-height: 1.6;
-    
-  }
-  .locationinfo:hover{
-     background-color: rgb(255, 255, 255);
+    border-radius: 4%;
+    box-shadow: 0 3px 10px rgb(0, 0, 0);
+    line-height: 1.6;
+
+}
+
+.locationinfo:hover {
+    background-color: rgb(255, 255, 255);
     transition: 0.95s;
-    transform:scale(1);
-	border:3px solid rgb(255, 255, 255);
+    transform: scale(1);
+    border: 3px solid rgb(255, 255, 255);
     box-shadow: 0 10px 10px rgba(6, 6, 6, 0.73);
 
-  }
-  .sportsavail{
+}
+
+.sportsavail {
     width: 290px;
     height: 185px;
     border: 2px solid black;
@@ -269,282 +296,312 @@ ul li a:hover{
     align-items: center;
     justify-content: center;
     position: relative;
-    left: 175px; 
+    left: 175px;
     bottom: 195px;
     background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
- color: white;
-  border-radius: 4%;
-  box-shadow: 0 3px 10px rgb(0, 0, 0);
-  line-height: 1.6;
+    color: white;
+    border-radius: 4%;
+    box-shadow: 0 3px 10px rgb(0, 0, 0);
+    line-height: 1.6;
 
 
-  }
-   .sportsavail:hover{
-       background-color: rgb(222, 232, 241);
-    transition: 0.95s;
-    transform:scale(.99);
-	border:3px solid rgb(255, 255, 255);
-
-
-   }
-   .cricketicon{
-    width: 35px;
-    
 }
-.timinginfo{
+
+.sportsavail:hover {
+    background-color: rgb(222, 232, 241);
+    transition: 0.95s;
+    transform: scale(.99);
+    border: 3px solid rgb(255, 255, 255);
+
+
+}
+
+.cricketicon {
+    width: 35px;
+
+}
+
+.timinginfo {
     width: 200px;
-    
+
     border: 2px solid black;
     text-align: center;
     position: relative;
     bottom: 160px;
     background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
- color: white;
- padding: 25px 10px;
- border-radius: 4%;
- box-shadow: 0 3px 10px rgb(0, 0, 0);
-}.timinginfo:hover{
-       background-color: rgb(222, 232, 241);
-    transition: 0.95s;
-    transform:scale(.99);
-	border:3px solid rgb(255, 255, 255);
-  
+    color: white;
+    padding: 25px 10px;
+    border-radius: 4%;
+    box-shadow: 0 3px 10px rgb(0, 0, 0);
 }
 
- 
-.rules{
+.timinginfo:hover {
+    background-color: rgb(222, 232, 241);
+    transition: 0.95s;
+    transform: scale(.99);
+    border: 3px solid rgb(255, 255, 255);
+
+}
+
+
+.rules {
     width: 590px;
 
     border: 2px solid black;
 
     display: flex;
     flex-direction: column;
-   align-items: center;
-   font-size: larger;
-   position: relative;
-   bottom: 150px;
-   left: 65px;
-   background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
- color: white;
- padding: 25px 10px;
- border-radius: 4%;
- box-shadow: 0 3px 10px rgb(0, 0, 0);
- line-height: 1.6;
+    align-items: center;
+    font-size: larger;
+    position: relative;
+    bottom: 150px;
+    left: 65px;
+    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+    color: white;
+    padding: 25px 10px;
+    border-radius: 4%;
+    box-shadow: 0 3px 10px rgb(0, 0, 0);
+    line-height: 1.6;
 
 }
-.rules:hover{
-       background-color: rgb(222, 232, 241);
+
+.rules:hover {
+    background-color: rgb(222, 232, 241);
     transition: 0.95s;
-    transform:scale(.99);
-	border:3px solid rgb(255, 255, 255);
+    transform: scale(.99);
+    border: 3px solid rgb(255, 255, 255);
 
 }
-.price{
+
+.price {
     width: 190px;
     height: 60px;
     border: 2px solid black;
-  
+
     display: flex;
     justify-content: center;
     position: relative;
-   bottom: 120px;
-   left: 265px;
-   background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
- color: white;
- padding: 5px 10px;
- border-radius: 4%;
- box-shadow: 0 3px 10px rgb(0, 0, 0);
+    bottom: 120px;
+    left: 265px;
+    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 4%;
+    box-shadow: 0 3px 10px rgb(0, 0, 0);
 }
-.price:hover{
-       background-color: rgb(222, 232, 241);
+
+.price:hover {
+    background-color: rgb(222, 232, 241);
     transition: 0.95s;
-    transform:scale(.99);
-	border:3px solid rgb(255, 255, 255);
- 
+    transform: scale(.99);
+    border: 3px solid rgb(255, 255, 255);
+
 }
-.addplayer{
+
+.addplayer {
     width: 590px;
-   
+
     border: 2px solid black;
 
     display: flex;
     flex-direction: column;
-   align-items: center;
-   font-size: larger;
-   position: relative;
-   bottom: 90px;
-   left: 70px;
-   background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
- color: white;
- padding: 20px 10px;
- border-radius: 4%;
- box-shadow: 0 3px 10px rgb(0, 0, 0);
+    align-items: center;
+    font-size: larger;
+    position: relative;
+    bottom: 90px;
+    left: 70px;
+    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
+    color: white;
+    padding: 20px 10px;
+    border-radius: 4%;
+    box-shadow: 0 3px 10px rgb(0, 0, 0);
 }
-.addplayer:hover{
-       background-color: rgb(222, 232, 241);
+
+.addplayer:hover {
+    background-color: rgb(222, 232, 241);
     transition: 0.95s;
-    transform:scale(.99);
-	border:3px solid rgb(255, 255, 255);
- 
+    transform: scale(.99);
+    border: 3px solid rgb(255, 255, 255);
+
 }
- .booking1{
-        width: 730px;
-        height: 120vh;
 
-    
-        position: relative;
-         bottom:220px;
-         background-image: linear-gradient(to top, #d5d7ea, #ffffff, #ffffff, #ffffff, #000833);
+.booking1 {
+    width: 730px;
+    height: 120vh;
 
-        
-    }
-    .headingbook{
-        color: rgb(0, 0, 0);
- 
-        font-weight: bolder;
-        font-size: larger;
-        width: 50%;
-        height: 30px;
-     
-        border-radius: 5px;
-        text-align: center;
-        background-color: #92919136;
-        padding: 10px 0px;
-    }
-    .timings{
-        width: 50%;
-        height: 64px;
-        
-        font-size: 20px;
-        text-align: center;
-        border-radius: 5px;
-       
- 
-    }
-    .sportss{
-        width: 50%;
-        height: 64px;
-        
-        font-size: 20px;
-        text-align: center;
-        border-radius: 5px;
-    }
-    .durations{
-        width: 50%;
-        height: 64px;
-       
- 
-        font-size: 20px;
-        text-align: center;
-        border-radius: 5px;
-    }
-     input[type="date"]{
-        width: 50%;
-        height: 64px;
-        
-        font-size: 20px;
-        text-align: center;
-        border: 1px solid black;
-        border-radius: 5px;
-     }
-     .book1{
-        text-align: center;
-        color: rgb(255, 255, 255);
-     }
-     .book2{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-     }
-     .pay{
-        width: 100%;
-        height: 64px;
-        background-color: rgba(91, 173, 37, 0.906);
-        font-size: 20px;
-        font-weight: bolder;
-        
-        padding: 10px 142px;
-       
-        cursor: pointer;
-        border-radius: 10px;
-        border: none;
-        box-shadow: 0 3px 10px rgb(0, 0, 0);
 
-        
-        
-     }
-     .paycash{
-        width: 100%;
-        height: 64px;
-        background-color: rgba(91, 173, 37, 0.906);
-        font-size: 20px;
-        font-weight: bolder;
-        
-        padding: 10px 139px;
- 
-        cursor: pointer;
-        border-radius: 10px;
-        border: none;
-        box-shadow: 0 3px 10px rgb(0, 0, 0);
+    position: relative;
+    bottom: 220px;
+    background-image: linear-gradient(to top, #d5d7ea, #ffffff, #ffffff, #ffffff, #000833);
 
-     }
+
+}
+
+.headingbook {
+    color: rgb(0, 0, 0);
+
+    font-weight: bolder;
+    font-size: larger;
+    width: 50%;
+    height: 30px;
+
+    border-radius: 5px;
+    text-align: center;
+    background-color: #92919136;
+    padding: 10px 0px;
+}
+
+.timings {
+    width: 50%;
+    height: 64px;
+
+    font-size: 20px;
+    text-align: center;
+    border-radius: 5px;
+
+
+}
+
+.sportss {
+    width: 50%;
+    height: 64px;
+
+    font-size: 20px;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.durations {
+    width: 50%;
+    height: 64px;
+
+
+    font-size: 20px;
+    text-align: center;
+    border-radius: 5px;
+}
+
+input[type="date"] {
+    width: 50%;
+    height: 64px;
+
+    font-size: 20px;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.book1 {
+    text-align: center;
+    color: rgb(255, 255, 255);
+}
+
+.book2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pay {
+    width: 100%;
+    height: 64px;
+    background-color: rgba(91, 173, 37, 0.906);
+    font-size: 20px;
+    font-weight: bolder;
+
+    padding: 10px 142px;
+
+    cursor: pointer;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0 3px 10px rgb(0, 0, 0);
+
+
+
+}
+
+.paycash {
+    width: 100%;
+    height: 64px;
+    background-color: rgba(91, 173, 37, 0.906);
+    font-size: 20px;
+    font-weight: bolder;
+
+    padding: 10px 139px;
+
+    cursor: pointer;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0 3px 10px rgb(0, 0, 0);
+
+}
+
 /* main2 */
-     
-     /* footer */
-footer{
+
+/* footer */
+footer {
     height: 30vh;
-    
+
     background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
-   
+
     background-size: cover;
     color: white;
-    
+
 }
-.row{
+
+.row {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 
 }
-.footh{
+
+.footh {
     color: rgb(219, 213, 213);
     font-size: larger;
     font-weight: bold;
-   
+
 }
-.column1{
+
+.column1 {
     margin-top: 2%;
 }
- p{
+
+p {
     list-style-type: none;
-    
- 
+
+
 }
-p a{
+
+p a {
     text-decoration: none;
-    font-size:medium;
+    font-size: medium;
     color: rgb(219, 213, 213);
     line-height: 1.6;
 }
-.fa-brands{
-    font-size:x-large;
+
+.fa-brands {
+    font-size: x-large;
     padding: 1.5%;
 }
-.fa-facebook{
-    color: #3b5998  ;
+
+.fa-facebook {
+    color: #3b5998;
 }
-.fa-twitter{
+
+.fa-twitter {
     color: #00acee;
 
 }
 
-.fa-linkedin{
- color: #0A66C2;
+.fa-linkedin {
+    color: #0A66C2;
 
 }
-a{
+
+a {
     text-decoration: none;
 }
+
 /* footer */
- 
