--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,25 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-*{
-    margin:0px;
-    padding:0px;
+
+* {
+    margin: 0px;
+    padding: 0px;
 }
-#container{
+
+#container {
     background-image: url(../../assets/images/light.jpg);
     height: 100vh;
     background-position: center;
     background-size: cover;
 }
-.forms h1,form{
+
+.forms h1,
+form {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 7%;
- 
-   
+
+
 
 
 }
-.forms{
+
+.forms {
     position: relative;
     top: 29%;
     border: 2px solid rgb(180, 176, 176);
@@ -28,38 +33,41 @@
     border-radius: 2%;
     box-shadow: 0 10px 10px rgba(215, 211, 211, 0.230);
     height: 60%;
-    background-color: rgba(0,0,0,0.3);
-   
+    background-color: rgba(0, 0, 0, 0.3);
+
 }
-#email{
+
+#email {
     width: 80%;
     height: 45px;
-       border-radius: 5px;
-       border: none;
-    
+    border-radius: 5px;
+    border: none;
+
 }
 
-input[type="email"]::placeholder{
+input[type="email"]::placeholder {
     padding-left: 5%;
-    
- 
-} 
-input[type="password"]::placeholder{
+
+
+}
+
+input[type="password"]::placeholder {
     padding-left: 5%;
- 
-} 
+
+}
 
 
 
 
-#password{
+#password {
     width: 80%;
     height: 45px;
-     border-radius: 5px;
-       border: none;
-    
+    border-radius: 5px;
+    border: none;
+
 }
-#login{
+
+#login {
     width: 100%;
     height: 45px;
     font-size: larger;
@@ -69,29 +77,33 @@ input[type="password"]::placeholder{
     color: white;
     padding: 10px 90px;
     border-radius: 10px;
-    
+
 }
-.sign{
+
+.sign {
     color: white;
 }
-.fp{
+
+.fp {
     color: white;
     font-size: large;
 }
-.newsign{
+
+.newsign {
     color: white;
     font-weight: bold;
     font-size: large;
 }
-#newlogin{
+
+#newlogin {
     padding: 0px 50px;
     height: 45px;
     font-size: larger;
     font-weight: bolder;
     cursor: pointer;
-    background-color:rgb(27, 190, 27);
+    background-color: rgb(27, 190, 27);
     color: white;
-       border-radius: 10px;
-    
-    
+    border-radius: 10px;
+
+
 }
