--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -1,15 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-*{
-    margin:0px;
-    padding:0px;
+
+* {
+    margin: 0px;
+    padding: 0px;
 }
-#container{
+
+#container {
     background-image: url(../../../assets/images/light.jpg);
     height: 100vh;
     background-position: center;
     background-size: cover;
 }
-.tick{
+
+.tick {
     position: relative;
     top: 30%;
     border: 2px solid rgb(180, 176, 176);
@@ -23,15 +26,17 @@
     align-items: center;
     justify-content: center;
     padding: 10px 0px;
-    background-color: rgba(0,0,0,0.3);
-   
-   
+    background-color: rgba(0, 0, 0, 0.3);
+
+
 }
-.fa-check{
+
+.fa-check {
     color: green;
-    font-size:520%;
+    font-size: 520%;
 }
-#joinasplayers{
+
+#joinasplayers {
     padding: 0px 32px;
     height: 45px;
     font-size: large;
@@ -41,15 +46,17 @@
     color: white;
     border-radius: 10px;
     border: none;
-    
-    
+
+
 }
-.head{
+
+.head {
     color: green;
     font-size: xx-large;
     text-align: center;
 }
-#bookground{
+
+#bookground {
     padding: 0px 42px;
     height: 45px;
     font-size: large;
@@ -59,5 +66,5 @@
     color: white;
     border-radius: 10px;
     border: none;
-    
+
 }
