--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -1,27 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-*{
-    margin:0px;
-    padding:0px;
+
+* {
+    margin: 0px;
+    padding: 0px;
 }
-#container{
+
+#container {
     background-image: url(../../assets/images/light.jpg);
     height: 100vh;
     background-position: center;
     background-size: cover;
 }
-.forms h1,form{
+
+.forms h1,
+form {
     display: flex;
     flex-direction: column;
     position: relative;
     left: 8%;
-    
+
     margin-top: 2%;
- 
-   
+
+
 
 
 }
-.forms{
+
+.forms {
     position: relative;
     top: 20%;
     border: 2px solid rgb(180, 176, 176);
@@ -30,56 +35,65 @@
     border-radius: 2%;
     box-shadow: 0 10px 10px rgba(215, 211, 211, 0.230);
     height: 70%;
-    background-color: rgba(0,0,0,0.3);
-   
-   
+    background-color: rgba(0, 0, 0, 0.3);
+
+
 }
-#email{
+
+#email {
     width: 80%;
     height: 45px;
     border-radius: 5px;
     border: none;
-    
+
 }
-#name1{
-    width: 80%;
- height: 45px;
- border-radius: 5px;
- border: none;
-  
-}
-#phoneno1{
-    width: 80%;
- height: 45px;
- border-radius: 5px;
- border: none;
-}
-#password{
+
+#name1 {
     width: 80%;
     height: 45px;
     border-radius: 5px;
     border: none;
-    
+
 }
-input[type="name"]::placeholder{
+
+#phoneno1 {
+    width: 80%;
+    height: 45px;
+    border-radius: 5px;
+    border: none;
+}
+
+#password {
+    width: 80%;
+    height: 45px;
+    border-radius: 5px;
+    border: none;
+
+}
+
+input[type="name"]::placeholder {
     padding-left: 5%;
-    
- 
-} 
-input[type="password"]::placeholder{
+
+
+}
+
+input[type="password"]::placeholder {
     padding-left: 5%;
- 
-} 
-input[type="email"]::placeholder{
+
+}
+
+input[type="email"]::placeholder {
     padding-left: 5%;
-    
- 
-} 
-input[type="text"]::placeholder{
+
+
+}
+
+input[type="text"]::placeholder {
     padding-left: 5%;
- 
-} 
-#newlogin{
+
+}
+
+#newlogin {
     padding: 0px 50px;
     height: 45px;
     font-size: large;
@@ -91,21 +105,24 @@ input[type="text"]::placeholder{
     left: 23%;
     border-radius: 10px;
     border: none;
-    
-    
+
+
 }
-.alert{
-    color:white;
+
+.alert {
+    color: white;
     position: relative;
     left: 2%;
 }
-label{
+
+label {
     color: white;
-    
+
 }
-h1.signuphead{
+
+h1.signuphead {
     color: white;
     position: relative;
     left: 20%;
-    
+
 }
