--- a/assets/css/findplayers.css
+++ b/assets/css/findplayers.css
@@ -53,6 +53,7 @@ ul li a:hover{
     width:14%;
     position: relative;
     bottom: 80px;
+    left: 46px;
 }
 /* header */
 
@@ -273,7 +274,7 @@ footer{
     justify-content: space-around;
 
 }
-.footh{
+.foot-heading{
     color: rgb(219, 213, 213);
     font-size: larger;
     font-weight: bold;
