--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    overflow-y: hidden;
+  
 }
 
 header {
@@ -68,7 +68,7 @@ ul li a:hover {
 .logo {
     width: 14%;
     position: relative;
-    bottom: 162px;
+    bottom: 50px;
     left: 46px;
 }
 
@@ -86,74 +86,24 @@ ul li a:hover {
     font-size: xx-large;
     font-weight: bolder;
     position: relative;
-    bottom: 230px;
+    bottom: 110px;
     color: white;
 }
 
-.cont2 {
-    background-color: rgb(2, 2, 45);
-    border: 5px solid rgb(25, 11, 82);
-    border-radius: 10%;
-    width: 6%;
-    height: 102px;
-    box-shadow: 0 10px 10px rgba(14, 1, 1, 0.23);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 90%;
-    position: relative;
-    bottom: 78px;
-
-
-
-}
-
-.userlogo {
-    width: 35px;
-    position: relative;
-
-}
 
 
 
 
 
-.fa-user {
-    font-size: xx-large;
-    margin-top: 5px;
-    color: white;
-
-}
-
-.login2 {
-    font-size: 13px;
-    padding: 2px 5px;
-    background-color: rgb(5, 120, 47);
-    color: white;
-    font-weight: 500;
-    cursor: pointer;
-    border: none;
-    position: relative;
-    top: 10px;
-    border-radius: 3px;
 
 
 
-}
 
-.cricketicon {
-    width: 30px;
-}
 
-.fa-star {
-    color: rgb(255, 183, 0);
-    font-size: 17px;
-    position: relative;
-    right: 10px;
 
-}
 
-.main2 {
+
+.main {
     height: 87vh;
 
 
@@ -168,83 +118,47 @@ ul li a:hover {
 }
 
 .sidebar1 {
-    background-color: rgba(255, 255, 255, 0.2);
-    color: white;
+    background-color:rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     margin: 10px 10px;
-    border-radius: 9%;
+  
     height: 80vh;
 
 }
 
 .sidebar2 {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color:white;
     color: white;
     margin: 10px 10px;
-    border-radius: 0%;
+
     display: flex;
     justify-content: center;
     align-items: center;
 
 }
-
-.box1 {
-
-    background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-
-    border: 1px solid rgb(25, 11, 82);
-    border-radius: 10%;
-    width: 55%;
-    height: 450px;
-    box-shadow: 0 10px 10px rgba(14, 1, 1, 0.23);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 2%;
-
-    position: relative;
-    top: 20px;
-
-
-
-
-}
-
-.playerinfo {
+.contact-info{
     color: black;
-    width: 200px;
-    background-color: rgb(208, 216, 216);
-    padding: 10px 10px;
-    position: relative;
-    bottom: 50px;
-}
+    font-size: large;
 
-.profilepic {
-    width: 170px;
+}
+.contact{
     position: relative;
-    top: 30px;
+    left: 50px;
+    top: 70px;
 }
 
 
 
 
-.profile {
-    font-size: medium;
-    padding: 9px 20px;
-    color: rgb(20, 14, 14);
-    font-weight: bold;
-    cursor: pointer;
-    border: none;
-    margin-bottom: 5px;
-    position: relative;
-    top: 30px;
-    box-shadow: 0 3px 10px rgb(3, 10, 87);
 
-}
+
+
+
 
 .container {
     background-color: rgba(15, 67, 209, 0.82);
     width: 390px;
-    height: 70vh;
+    height: 50vh;
     display: flex;
     flex-direction: column;
 
@@ -262,17 +176,22 @@ ul li a:hover {
 .main {
     flex: 1;
     color: rgb(0, 0, 0);
-    background-color: rgba(229, 233, 236, 0.952);
+    background-color: white;
     padding: 20px 10px;
 
 }
+.assistant{
+    width: 90px;
+    position: relative;
+    left: 136px;
+}
 
 .messageto {
-    background-color: rgb(248, 248, 248);
+    background-color: rgb(209, 215, 219);
     color: black;
-    width: 10%;
+    width: 60%;
     padding: 7px 15px;
-    margin-left: 13px;
+    margin-left: 63px;
     border-radius: 35%;
     box-shadow: 0 3px 10px rgba(240, 238, 238, 0.626);
 }
@@ -283,6 +202,7 @@ ul li a:hover {
     width: 10%;
     padding: 7px 15px;
     margin-left: 78%;
+    margin-top: 10px;
     border-radius: 35%;
     box-shadow: 0 3px 10px rgba(240, 238, 238, 0.626);
 }
@@ -312,23 +232,11 @@ form button {
     border-radius: 0px;
 }
 
-.fa-table-tennis-paddle-ball {
-    color: rgb(234, 234, 234);
-    font-size: 180%;
-}
 
-.ratings {
-    display: flex;
-    position: relative;
-    left: 38%;
-    bottom: 7%;
-}
 
-.sports {
-    position: relative;
-    right: 30%;
 
-}
+
+
 
 .cont {
     color: black;
@@ -357,46 +265,121 @@ form button {
     bottom: 500px;
 }
 
-/* dropdown */
-.staticsreport {
-    color: black;
-    position: relative;
-    left: 17px;
+.fa-phone,.fa-envelope{
+    color: #041d36;
+    font-size: large;
 }
-
-.dropdownstatistics {
+.faqhead{
     position: relative;
-    left: 150px;
+left: 90px;
 }
+.faq-ques1{
+    position: relative;
+    top: 0px;
+    left: 0px;
+  width: 500px;
 
-.statisticsbtn {
-    padding: 10px 20px;
-    background-color: #07172c;
+  
+
+}
+.faq{
+    position: relative;
+    top: 150px;
+    left: 50px;
+    
+}
+.question{
+    background-color: #041d36;
+    padding: 15px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     color: white;
-    cursor: pointer;
-    border: none;
+    text-decoration: none;
+    font-size: 17px;
+}
+.plusicon{
+    width: 17px;
+  }
+.plusicon::before{
+    content: "";
+    position: absolute;
+    background-color: white;
+    width: 17px;
+    height:2px;
+   
+    
+  
+}
+.plusicon::after{
+    content: "";
+    position: absolute;
+    background-color: white;
+    width: 17px;
+    height:2px;
+    transform: rotate(90deg);
+  
 }
 
-.dropdownlist {
 
-    color: black;
-    background-color: rgb(189, 195, 208);
-    width: 210px;
-    height: 170px;
+.ans{
+    background-color: #041d36;
+    padding: 0px 20px;
+    color: white;
+    font-size: 17px;
+    margin: 1px 0px;
+    height: 0px;
+    opacity:0;
     position: relative;
-    right: 50px;
-    display: none;
-    font-size: 18px;
-    font-weight: 500;
-    text-align: left;
-    border-radius: 5px;
+  
 }
+.faq-ques1:target .ans{
+    height: auto;
+    opacity: 1;
+    padding: 15px 20px;
 
-.dropdownlist p:hover {
-    background-color: rgb(240, 252, 255);
-       width: 180px;
 }
+.faq-ques1:target .plusicon::after{
+    transform: rotateY(90deg);
+ 
+}
+.faq-ques2:target .ans{
+    height: auto;
+    opacity: 1;
+    padding: px 20px;
 
-.dropdownstatistics:hover .dropdownlist {
-    display: block;
+}
+.faq-ques2:target .plusicon::after{
+    transform: rotateY(90deg);
+ 
+}
+.faq-ques3:target .ans{
+    height: auto;
+    opacity: 1;
+    padding: 15px 20px;
+
+}
+.faq-ques3:target .plusicon::after{
+    transform: rotateY(90deg);
+ 
+}
+.faq-ques4:target .ans{
+    height: auto;
+    opacity: 1;
+    padding: 15px 20px;
+
+}
+.faq-ques4:target .plusicon::after{
+    transform: rotateY(90deg);
+ 
+}
+.faq-ques5:target .ans{
+    height: auto;
+    opacity: 1;
+    padding: 15px 20px;
+
+}
+.faq-ques5:target .plusicon::after{
+    transform:rotateY('90deg')
+ 
 }
