--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
     margin: 0px;
@@ -44,18 +43,18 @@ ul li a:hover {
 
 .login {
     font-size: medium;
-    padding: 2px 18px;
-    height: 100%;
+    padding: 2px 20px;
+    height: 105%;
     width: 100%;
     background-color: rgb(5, 34, 120);
     color: white;
     position: relative;
     bottom: 5%;
-    font-weight: bold;
+    font-weight: 600;
     cursor: pointer;
     border: none;
     border-radius: 10px;
-
+    box-shadow: 0 3px 10px rgb(0, 0, 0);
 
 }
 
@@ -85,7 +84,7 @@ ul li a:hover {
     font-size: 350%;
     color: rgb(8, 8, 8);
     margin-left: 3.5%;
-    animation: change 5s infinite;
+    animation: change 7s infinite;
 
 }
 
@@ -171,7 +170,7 @@ ul li a:hover {
 
 .box-heading1 {
     font-size: 190%;
-
+    font-weight: 500;
     position: relative;
     bottom: 13%;
     color: rgb(255, 255, 255);
@@ -179,7 +178,7 @@ ul li a:hover {
 
 .box-heading2 {
     font-size: 190%;
-
+    font-weight: 500;
     position: relative;
     bottom: 21%;
     color: rgb(255, 255, 255);
@@ -187,7 +186,7 @@ ul li a:hover {
 
 .box-heading3 {
     font-size: 190%;
-
+    font-weight: 500;
     position: relative;
     bottom: 21%;
     color: rgb(255, 255, 255);
