--- a/assets/css/registeredplayer.css
+++ b/assets/css/registeredplayer.css
@@ -17,6 +17,7 @@ header {
     height: 15vh;
     background-position: center;
     background-size: cover;
+    font-family: 'Noto Serif Khojki', serif;
 
 }
 
@@ -25,13 +26,16 @@ ul {
     justify-content: end;
     margin-right: 20%;
     position: relative;
-    top: 30px;
+    top:38px;
+    left: 220px;
+    
 
 }
 
 ul li {
     list-style-type: none;
     padding: 2%;
+    
 
 }
 
@@ -65,7 +69,7 @@ ul li a:hover {
 .logo {
     width: 14%;
     position: relative;
-    bottom: 38px;
+    bottom: 27px;
     left: 46px;
 }
 
