--- a/assets/css/accountcreated.css
+++ b/assets/css/accountcreated.css
@@ -1,10 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-
 * {
     margin: 0px;
     padding: 0px;
 }
-
+/* account created container */
 #container {
     background-image: url(../../../assets/images/light.jpg);
     height: 100vh;
@@ -12,6 +10,7 @@
     background-size: cover;
 }
 
+/* tick box */
 .tick {
     position: relative;
     top: 30%;
@@ -35,6 +34,13 @@
     color: green;
     font-size: 520%;
 }
+.head {
+    color: green;
+    font-size: xx-large;
+    text-align: center;
+}
+
+/* button */
 
 #joinasplayers {
     padding: 0px 32px;
@@ -42,18 +48,18 @@
     font-size: large;
     font-weight: bolder;
     cursor: pointer;
-    background-color: rgb(22, 199, 110);
+    background-color: rgba(14, 163, 24, 0.783);
     color: white;
     border-radius: 10px;
     border: none;
+    box-shadow: 0 3px 10px rgb(35, 34, 34);
+
 
 
 }
+#joinasplayers:hover{
+    background-color: rgb(15, 190, 15);
 
-.head {
-    color: green;
-    font-size: xx-large;
-    text-align: center;
 }
 
 #bookground {
@@ -62,9 +68,20 @@
     font-size: large;
     font-weight: bolder;
     cursor: pointer;
-    background-color: rgb(22, 199, 110);
+    background-color: rgba(14, 163, 24, 0.783);
     color: white;
     border-radius: 10px;
     border: none;
+    box-shadow: 0 3px 10px rgb(35, 34, 34);
 
 }
+#bookground:hover{
+    background-color: rgb(15, 190, 15);
+
+}
+/* button */
+
+
+
+/* tick box */
+/* account created container */
