--- a/assets/css/registeredplayer.css
+++ b/assets/css/registeredplayer.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 * {
     margin: 0px;
@@ -13,7 +12,6 @@ body {
 
 header {
     background-image: linear-gradient(to right top, #00021a, #00080c, #041d36, #07172c, #04020b);
-
     height: 15vh;
     background-position: center;
     background-size: cover;
@@ -27,8 +25,8 @@ ul {
     margin-right: 20%;
     position: relative;
     top:38px;
-    left: 220px;
-    
+    left: 290px;
+
 
 }
 
@@ -50,40 +48,22 @@ ul li a:hover {
 
 }
 
-.login {
-    font-size: medium;
-    padding: 5px 15px;
-    height: 113%;
-    width: 102%;
-    background-color: rgb(5, 34, 120);
-    color: white;
-    position: relative;
-    bottom: 95px;
-    font-weight: bold;
-    cursor: pointer;
-    border: none;
-
-
-}
 
 .logo {
     width: 14%;
     position: relative;
-    bottom: 27px;
+    bottom: 35px;
     left: 46px;
 }
 
-#main1 {
-    height: 5vh;
 
-}
 
 .cont1 {
     text-align: center;
     font-size: xx-large;
     font-weight: bolder;
     position: relative;
-    bottom: 110px;
+    bottom: 130px;
     color: white;
 }
 
@@ -100,21 +80,6 @@ ul li a:hover {
 
 }
 
-.login2 {
-    font-size: medium;
-    padding: 0px 0px;
-    height: 100%;
-    width: 100%;
-    background-color: rgb(5, 120, 105);
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-    border: none;
-    margin-bottom: 5px;
-
-
-}
-
 .cricketicon {
     width: 30px;
 }
@@ -127,13 +92,8 @@ ul li a:hover {
 
 }
 
-.main2 {
+.maincontainer{
     height: 87vh;
-    /* border:20px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
-     */
-
-
 }
 
 .bar {
