--- a/assets/css/bookground.css
+++ b/assets/css/bookground.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0px;
     padding: 0px;
@@ -8,7 +7,6 @@
 
 /* header */
 header {
-
     height: 12vh;
     background-position: center;
     background-size: cover;
@@ -51,10 +49,8 @@ ul li a:hover {
     border: none;
     border-radius: 10px;
     font-family: 'Noto Serif Khojki', serif;
-
-    
-    
-
+    box-shadow: 0 3px 10px rgb(10, 9, 46);
+    letter-spacing: 1px;
 
 }
 
@@ -63,11 +59,10 @@ ul li a:hover {
     position: relative;
     bottom: 80px;
     left: 46px;
-    
-
 }
 
 /* header */
+
 /* main1 search */
 .main1 {
     overflow: hidden;
@@ -77,7 +72,6 @@ ul li a:hover {
     position: sticky;
     top: 0%;
     z-index: 2;
-
     background-color: white;
 }
 
@@ -88,8 +82,6 @@ ul li a:hover {
     color: rgb(11, 7, 7);
     position: relative;
     top: 8px;
-
-
 }
 
 .locationselect {
@@ -110,15 +102,13 @@ ul li a:hover {
     bottom: 28px;
 
 }
-
+/* content2 */
 .content2 {
     display: flex;
     justify-content: center;
     color: rgb(0, 0, 0);
-
-
 }
-
+/* search bar */
 .searchnav {
     width: 80%;
     height: 6vh;
@@ -149,6 +139,7 @@ input[type="search"]::placeholder {
     color: rgb(0, 0, 0);
 
 }
+/* search bar */
 
 .locationicon {
     width: 58px;
@@ -189,14 +180,9 @@ input[type="search"]::placeholder {
     border: none;
     border-radius: 10%;
 
-
-
 }
 
 /* main1 search */
-
-
-
 
 
 
@@ -218,7 +204,6 @@ input[type="search"]::placeholder {
     grid-template-columns: 1fr 1fr 1fr;
     grid-row-gap: 70px;
 
-
 }
 
 .child {
@@ -235,8 +220,6 @@ input[type="search"]::placeholder {
     background-color: white;
     color: black;
 
-
-
 }
 
 .child:hover {
@@ -244,7 +227,7 @@ input[type="search"]::placeholder {
     border: 3px solid rgb(2, 3, 14);
         
 }
-
+/* groundimage */
 .groimg {
     width: 90%;
     border: 2px solid transparent;
@@ -253,6 +236,7 @@ input[type="search"]::placeholder {
     margin-left: 15px;
  
 }
+/* groundname */
 
 .groundn {
     color: rgb(6, 4, 4);
@@ -261,6 +245,7 @@ input[type="search"]::placeholder {
     text-align: center;
 
 }
+/* locationname */
 
 .locationn {
     color: rgb(0, 0, 0);
@@ -268,8 +253,8 @@ input[type="search"]::placeholder {
     font-weight: bolder;
     text-align: center;
 }
-
-.cricketicon {
+/* sportsicon */
+.sportsicon {
     width: 35px;
 }
 
@@ -294,7 +279,7 @@ input[type="search"]::placeholder {
     bottom: 8%;
 
 }
-
+/* book button */
 .book {
     font-size: medium;
     padding: 5px 15px;
